Plan routes date and time parameters, fixed misaligned searchform elements

--- a/front/src/styles.css
+++ b/front/src/styles.css
@@ -90,8 +90,8 @@
 }
 
 .toggleSearchTime {
-  position: absolute;
+  position: relative;
   right: 50;
   align-items: center;
-  display: inline-flex; 
+  display: inline-flex;
 }
